# polymarket

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: clob_client.cpp  clob_client.h  clob_types.h  data_client.cpp  data_client.h  data_types.h  gamma_client.cpp  gamma_client.h  gamma_types.h  gamma_types_json.h  http_client.cpp  http_client.h  logging.cpp  logging.h  types.h  url_utils.h  ws_client.cpp  ws_client.h  ws_types.h
tests/: mock_http_server.h  test_gamma_client.cpp  test_ws_client.cpp
tests/fixtures/clob/: book_69422147515888934539342749343952767069189843320299332157580167457035825622340.json  books_69422147515888934539342749343952767069189843320299332157580167457035825622340.json  clob_market_info_0x004230fb1f54a139d50ba2041e062a01461c931a6725ce482e3a9ab61b2925bb.json  fee_rate_69422147515888934539342749343952767069189843320299332157580167457035825622340.json  geoblock.json  last_trade_price_69422147515888934539342749343952767069189843320299332157580167457035825622340.json  last_trades_prices_69422147515888934539342749343952767069189843320299332157580167457035825622340.json  market_0x004230fb1f54a139d50ba2041e062a01461c931a6725ce482e3a9ab61b2925bb.json  market_0x5eed579ff6763914d78a966c83473ba2485ac8910d0a0914eef6d9fcb33085de.json  market_by_token_69422147515888934539342749343952767069189843320299332157580167457035825622340.json  market_by_token_73470541315377973562501025254719659796416871135081220986683321361000395461644.json  market_live_activity_0x004230fb1f54a139d50ba2041e062a01461c931a6725ce482e3a9ab61b2925bb.json  markets_page.json  midpoint_69422147515888934539342749343952767069189843320299332157580167457035825622340.json  midpoints_69422147515888934539342749343952767069189843320299332157580167457035825622340.json  neg_risk_69422147515888934539342749343952767069189843320299332157580167457035825622340.json  price_69422147515888934539342749343952767069189843320299332157580167457035825622340_buy.json  prices_69422147515888934539342749343952767069189843320299332157580167457035825622340_buy.json  prices_history_69422147515888934539342749343952767069189843320299332157580167457035825622340_1h_60.json  sampling_markets_page.json  sampling_simplified_markets_page.json  simplified_markets_page_empty_lte.json  spread_69422147515888934539342749343952767069189843320299332157580167457035825622340.json  spreads_69422147515888934539342749343952767069189843320299332157580167457035825622340.json  tick_size_69422147515888934539342749343952767069189843320299332157580167457035825622340.json  time.json
tests/fixtures/data/: live_volume_2890.json  open_interest_0x5eed579ff6763914d78a966c83473ba2485ac8910d0a0914eef6d9fcb33085de.json
tests/fixtures/gamma/: comments_27526.json  comments_user_0x47e72a14b695174062396a3d7d91f109ce672e20.json  event_2890.json  market_239826.json  market_239826_tags.json  (+13 more)
